<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_floating_material_dark"
    tools:context=".CameraStreamingActivity" >

    <com.qiniu.pili.droid.streaming.widget.AspectFrameLayout
        android:id="@+id/cameraPreview_afl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <com.qiniu.pili.droid.streaming.demo.CameraPreviewFrameView
            android:id="@+id/cameraPreview_surfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
        <include layout="@layout/focus_indicator"/>

    </com.qiniu.pili.droid.streaming.widget.AspectFrameLayout>
    <TextView
        android:id="@+id/log_info"
        android:contentDescription="@string/cd_tv_log_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <EditText
        android:contentDescription="@string/cd_et_input_method"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/camera_switch_btn"
        android:contentDescription="@string/cd_btn_camera_switcher"
        android:layout_marginTop="@dimen/pldroid_streaming_item_padding"
        android:layout_centerHorizontal="true"
        android:textColor="@color/pldroid_streaming_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stream_status"
        android:contentDescription="@string/cd_tv_stream_status"
        android:layout_marginLeft="@dimen/pldroid_streaming_streaming_status_padding"
        android:layout_marginTop="@dimen/pldroid_streaming_streaming_status_padding"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pldroid_streaming_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/torch_btn"
        android:contentDescription="@string/cd_btn_torch"
        android:layout_marginTop="@dimen/pldroid_streaming_item_padding"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/pldroid_streaming_item_padding"
        android:textColor="@color/pldroid_streaming_white"
        android:text="@string/flash_light_on"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/capture_btn"
        android:contentDescription="@string/cd_btn_capture"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/pldroid_streaming_item_padding"
        android:textColor="@color/pldroid_streaming_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/orientation_btn"
        android:contentDescription="@string/cd_btn_orientation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/pldroid_streaming_item_padding"
        android:textColor="@color/pldroid_streaming_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/mute_btn"
        android:contentDescription="@string/cd_btn_mute"
        android:layout_alignParentRight="true"
        android:layout_below="@id/torch_btn"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:layout_marginRight="@dimen/pldroid_streaming_item_padding"
        android:textColor="@color/pldroid_streaming_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/fb_btn"
        android:contentDescription="@string/cd_btn_fb"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:layout_below="@id/torch_btn"
        android:layout_marginLeft="@dimen/pldroid_streaming_item_padding"
        android:textColor="@color/pldroid_streaming_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/beautyLevel_seekBar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:max="100"
        android:progress="100"/>
    <include layout="@layout/status" />
    <include layout="@layout/camera_button_holder" />
</RelativeLayout>
